[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["wexqrrdi <gimatovadilara5@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
pyfiglet = "^0.8.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
start = 'poetry_demo.bebe:run'
